@@ -1,5 +1,9 @@
 1998-08-19  Tanaka Akira      <akr@jaist.ac.jp>
 
+	* Makefile: Avoid an error about unexisting `scm'.
+
+1998-08-19  Tanaka Akira      <akr@jaist.ac.jp>
+
 	* Makefile: Add a rule for making `ew-parse.el'.
 
 	* ew-parse.scm: New file.
